compiler/testData/diagnostics/tests/declarationChecks/LocalVariableWithNoTypeInformation.kt
// RUN_PIPELINE_TILL: FRONTEND
fun test() {
    val <!VARIABLE_WITH_NO_TYPE_NO_INITIALIZER!>a<!>
}

/* GENERATED_FIR_TAGS: functionDeclaration, localProperty, propertyDeclaration */
